syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.eventhub.ticket_service.proto";

service Ticket {
  rpc createTicket (CreateTicketRequest) returns (CreateTicketResponse);
}
message CreateTicketRequest {
  string userId = 1;
  string userName = 2;
  string userSurname = 3;
  string userEmail = 4;
  string eventId = 5;
  string eventName = 6;
  string startDate = 7;
  string startTime = 8;
}

message CreateTicketResponse {
  bool success = 1;
}